# MNIST_neural_network

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: server.py  test.py
backend/src/neural_network/: layer.py  neural_network.py  predictor.py
backend/trained/: mnist_layer_0_biases.npy  mnist_layer_0_weights.npy  mnist_layer_1_biases.npy  mnist_layer_1_weights.npy  mnist_layer_2_biases.npy  mnist_layer_2_weights.npy
frontend/: Dockerfile  nginx.conf  package.json  svelte.config.js
frontend/src/components/: BarGraph.svelte  Grid.svelte  barConfig.js  prediction.svelte.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/mnist/: +page.svelte
